update drain, update roll template

--- a/Shadowrun4thEdition/Shadowrun4thEdition.html
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.html
@@ -1273,7 +1273,7 @@
             <div class="rows repeating-container">
               <fieldset class="repeating_spell">
                 <input name="attr_dicepool" type="hidden" value="0"/>
-                <button name="roll_spell}" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}"><span name="attr_name"></span></button><span class="center" name="attr_type"></span><span class="center" name="attr_range"></span><span class="center" name="attr_duration"></span><span class="center" name="attr_drain"></span>
+                <button name="roll_spell}" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[ceil(?{Force|}/2)+(@{drain})]]}}"><span name="attr_name"></span></button><span class="center" name="attr_type"></span><span class="center" name="attr_range"></span><span class="center" name="attr_duration"></span><span class="center" name="attr_drain"></span>
                 <input class="collapse-flag" name="attr_display_flag" type="checkbox" checked="checked"/><span class="pictos">i</span>
                 <input class="settings-flag" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
                 <div class="collapse"><span name="attr_notes"></span></div>
@@ -1348,7 +1348,7 @@
             <div class="rows repeating-container">
               <fieldset class="repeating_preps">
                 <input name="attr_dicepool" type="hidden" value="0"/>
-                <button name="roll_preps}" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}"><span name="attr_name"></span></button><span class="center" name="attr_type"></span><span class="center" name="attr_range"></span><span class="center" name="attr_duration"></span><span class="center" name="attr_drain"></span>
+                <button name="roll_preps}" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{combat_type}?{Force|}}}{{drain=[[ceil(?{Force|}/2)+(@{drain})]]}}"><span name="attr_name"></span></button><span class="center" name="attr_type"></span><span class="center" name="attr_range"></span><span class="center" name="attr_duration"></span><span class="center" name="attr_drain"></span>
                 <input class="collapse-flag" name="attr_display_flag" type="checkbox" checked="checked"/><span class="pictos">i</span>
                 <input class="settings-flag" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
                 <div class="collapse"><span name="attr_notes"></span></div>
@@ -1677,7 +1677,7 @@
             </div>
             <fieldset class="repeating_forms">
               <input name="attr_dicepool" type="hidden" value="0"/>
-              <button name="roll_complex_form" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{base}}}{{dice=[[((@{skill}+@{dicepool}+@{resonance})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Level ?{Level|}, Fade [[?{Level|}+(@{fade})]]}}"><span name="attr_name"></span></button><span class="center eclipse" name="attr_c"></span><span class="center eclipse" name="attr_o"></span><span class="center eclipse" name="attr_m"></span><span class="center eclipse" name="attr_p"></span><span class="center eclipse" name="attr_l"></span><span class="center eclipse" name="attr_e"></span><span class="center eclipse" name="attr_x"></span><span class="center eclipse" name="attr_ "></span><span class="center eclipse" name="attr_f"></span><span class="center eclipse" name="attr_o"></span><span class="center eclipse" name="attr_r"></span><span class="center eclipse" name="attr_m"></span>
+              <button name="roll_complex_form" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{base}}}{{dice=[[((@{skill}+@{dicepool}+@{resonance})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=Level ?{Level|}, Fade [[ceil(?{Level|}/2)+(@{fade})]]}}"><span name="attr_name"></span></button><span class="center eclipse" name="attr_c"></span><span class="center eclipse" name="attr_o"></span><span class="center eclipse" name="attr_m"></span><span class="center eclipse" name="attr_p"></span><span class="center eclipse" name="attr_l"></span><span class="center eclipse" name="attr_e"></span><span class="center eclipse" name="attr_x"></span><span class="center eclipse" name="attr_ "></span><span class="center eclipse" name="attr_f"></span><span class="center eclipse" name="attr_o"></span><span class="center eclipse" name="attr_r"></span><span class="center eclipse" name="attr_m"></span>
               <input class="collapse-flag" name="attr_display_flag" type="checkbox"/><span class="pictos">i</span>
               <input class="settings-flag" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
               <div class="collapse"><span name="attr_notes"></span></div>
@@ -2757,7 +2757,7 @@
       <fieldset class="repeating_NPCspell">
         <input name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
         <input name="attr_spell" type="hidden" value=""/><span name="attr_dice"></span>
-        <button name="roll_spell" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{base}}}{{dice=[[((@{dice})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{category}?{Force|}, Drain [[?{Force|}+(@{drain})]]}}"><span name="attr_name"></span></button><span name="attr_spell"></span>
+        <button name="roll_spell" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=@{name}}}{{base=^{base}}}{{dice=[[((@{dice})+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{desc=@{category}?{Force|}, Drain [[ceil(?{Force|}/2)+(@{drain})]]}}"><span name="attr_name"></span></button><span name="attr_spell"></span>
         <div class="settings">
           <input name="attr_category" type="hidden" value=""/>
           <h2 data-i18n="category">Category</h2>
@@ -2894,35 +2894,33 @@
 </div>
 <div class="footer">
   <div><span data-i18n="copyrightfooter"></span><span>Version</span><span name="attr_version"></span></div><img alt="Emerald Productins, LLC" src="https://raw.githubusercontent.com/clevett/roll20-character-sheets/shadowrun4ev1/Shadowrun4thEdition/src/imgs//EProd_Emerald_Gloss.png"/>
-</div><div class="rolltemplates">
-	<!--Roll Template for rolling without Focus-->
-    <rolltemplate class="sheet-rolltemplate-rolls">
-    	<div class="sheet-template-body">
-	    	<div class="sheet-template-header">
-	    		{{#header}}{{header}}{{/header}}{{#spec}}<span> ({{spec}})</span>{{/spec}}<br />
-	    		{{#arm}}<span>{{arm}}</span>{{/arm}}
-	    		{{#base}}<span>{{base}}</span>{{/base}}
-	    		{{#rollLess() wound 0}}<span> ♦ </span><span data-i18n="wounds">Wounds</span>{{/rollLess() wound 0}}
-	    		{{#rollLess() mod 0}}<span> ♦ </span><span data-i18n="modifier">Modifier</span>{{/rollLess() mod 0}}
-	    		{{#rollGreater() mod 0}}<span> ♦ </span><span data-i18n="modifier">Modifier</span>{{/rollGreater() mod 0}}
-	    		{{#rollGreater() edge 0}}<span> ♦ </span><span data-i18n="edge">Edge</span>{{/rollGreater() edge 0}}
-	    	</div>
-	    		{{#dice}}<div class="sheet-template-row">{{dice}}</div>{{/dice}}
-	    		{{#desc}}
-	    			<div class="sheet-template-row">
-	    				<span class="sheet-template-desc">
-		    				{{desc}}
-		    				{{#rollGreater() rea 0}}, <span data-i18n="reach">Reach<span> {{rea}}{{/rollGreater() rea 0}}
-		    				{{#rollGreater() drain 1}}, <span data-i18n="drain">Drain</span> {{drain}}{{/rollGreater() drain 1}}
-		    				{{#rollLess() drain 2}}, <span data-i18n="drain-2">Drain 2<span>{{/rollLess() drain 2}}
-	    				</span>
-	    			</div>
-	    		{{/desc}}
-	    		{{#opp}}<div class="sheet-template-row">{{opp}}</div>{{/opp}}
-	    </div>
-    </rolltemplate>
 </div>
-<input type="hidden" name="attr_wounds" value="0" />
+<div class="rolltemplates">
+  <rolltemplate class="sheet-rolltemplate-rolls">
+    <div class="sheet-template-container">
+      <div class="sheet-template-header">{{#header}}
+        <h1>{{header}}</h1>{{/header}}
+        {{#base}}<span>{{base}}</span>{{/base}}
+        {{#rollLess() wound 0}}<span> ♦ </span><span data-i18n="wounds"></span>{{/rollLess() wound 0}}
+        {{#rollLess() mod 0}}<span> ♦ </span><span data-i18n="modifier"></span>{{/rollLess() mod 0}}
+        {{#rollGreater() mod 0}}<span> ♦ </span><span data-i18n="modifier"></span>{{/rollGreater() mod 0}}
+        {{#rollGreater() edge 0}}<span> ♦ </span><span data-i18n="edge"></span>{{/rollGreater() edge 0}}
+      </div>
+      <div class="sheet-template-body">{{#dice}}
+        <div class="sheet-template-row"><span class="inlinerollresult">{{dice}}</span></div>{{/dice}}
+        {{#desc}}
+        <div class="sheet-template-row"><span class="sheet-template-desc">
+             {{desc}}
+            {{#rollGreater() rea 0}}<span>,</span><span data-i18n="reach"></span>{{rea}}
+            {{/rollGreater() rea 0}}
+            {{#rollGreater() drain 1}}<span>,</span><span data-i18n="drain"></span>{{drain}}
+            {{/rollGreater() drain 1}}
+            {{#rollLess() drain 1}}<span>,</span><span data-i18n="drain-2"></span>{{drain}}
+            {{/rollLess() drain 1}}</span></div>{{/desc}}
+      </div>
+    </div>
+  </rolltemplate>
+</div><input type="hidden" name="attr_wounds" value="0" />
 <input type="hidden" name="attr_explode_toggle" value="" />
 <input type="hidden" name="attr_attribute_roll" value="" />
 
@@ -3244,6 +3242,7 @@ const processingFunctions = {
     determineConditionBase: (type, drone) => drone && drone === 'drone' ? 6 : type === 'vehicle' ? 12 : 8,
     determineConditionAttribute: attrs => attrs.willpower ? attrs.willpower : attrs.body ? attrs.body : attrs.device_rating ? attrs.device_rating : 0,
     determineWeaponAttributesByType: weaponType =>  weaponType === 'range' ? sheetAttributes.rangeAttributes : sheetAttributes.meleeAttributes,
+    determineExplodingEdge: newValue => newValue === `@{edge}` ?  "!" : "",
     findFlagInKeys: attrs => Object.keys(attrs).find(key => key.includes('_flag')),
     findModifierInKeys: attrs => Object.keys(attrs).find(key => key.includes('_modifier')),
     processTempFlags: attrs => {
@@ -3323,11 +3322,11 @@ const processingFunctions = {
 //module.exports = processingFunctions;
 
     //Edge toggle to include ! for exploding dice
-  const edgeToggle = eventinfo => {
-    processingFunctions.setAttributes({
-      explode_toggle: eventinfo.newValue != 0 ? "!" : ""
-    })
-  }
+const edgeToggle = newValue => {
+  processingFunctions.setAttributes({
+    explode_toggle: processingFunctions.shadowrun.determineExplodingEdge(newValue)
+  })
+}
 
 const updateHostAttributes = newValue => {
   newValue = processingFunctions.parseInteger(newValue)
@@ -3869,7 +3868,7 @@ const updateDefaultAttribute = newValue => {
 
 	on('clicked:cond_reset_physical clicked:cond_reset_stun', eventinfo => resetConditionTrack(eventinfo))
 
-	on('change:edge_toggle', eventinfo => edgeToggle(eventinfo))
+	on('change:edge_toggle', eventinfo => edgeToggle(eventinfo.newValue))
 
 	on('change:device_rating change:matrix_modifier', () => updateMatrixMaximum())
 
