--- a/Shadowrun4thEdition/Shadowrun4thEdition.html
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.html
@@ -28,7 +28,7 @@
     <label class="switch" data-i18n-title="edge" title="edge">
       <input class="whisper-toggle" name="attr_edge_toggle" type="checkbox" value="@{edge}"/><span class="slider"></span>
     </label>
-    <button name="d6" title="Roll D6s" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{d6}}}{{base=^{d6}}}{{dice=[[(?{d6s|0}d6>5)]]}}">L</button>
+    <button name="d6" title="Roll D6s" type="roll" value="@{gm_toggle} &{template:rolls}{{header=^{d6}}}{{base=^{d6}}}{{dice=[[(?{d6s|0}d6>5@{explode_toggle})]]}}">L</button>
     <input name="attr_tab" type="hidden" value="options"/>
     <button class="pictos" name="act_tab_options" title="@{tab}" type="action">y</button>
     <button data-i18n="core" name="act_tab_core" type="action" title="@{tab}">core</button>
