save css upates

--- a/Shadowrun4thEdition/Shadowrun4thEdition.html
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.html
@@ -461,7 +461,7 @@
 <option value="Parachuting" data-i18n="parachuting">Parachuting</option>
 <option value="Perception" data-i18n="perception">Perception</option>
 <option value="Running" data-i18n="running">Running</option>
-<option value="Shadowing" data-i18n="Shadowing">Shadowing</option>
+<option value="Shadowing" data-i18n="shadowing">Shadowing</option>
 <option value="Survival" data-i18n="survival">Survival</option>
 <option value="Swimming" data-i18n="swimming">Swimming</option>
 <option value="Tracking" data-i18n="tracking">Tracking</option>
@@ -504,7 +504,7 @@
 <option value="Computer" data-i18n="computer">Computer</option>
 <option value="Cybercombat" data-i18n="cybercombat">Cybercombat</option>
 <option value="Cybertechnology" data-i18n="cybertechnology">Cybertechnology</option>
-<option value="Data Search" data-i18n="data search">Data Search</option>
+<option value="Data Search" data-i18n="datasearch">Data Search</option>
 <option value="Demolitions" data-i18n="demolitions">Demolitions</option>
 <option value="Electronic Warfare" data-i18n="electronicwarfare">Electronic Warfare</option>
 <option value="First Aid" data-i18n="firstaid">First Aid</option>
@@ -898,7 +898,7 @@
                   <input name="attr_damage" placeholder="9P" title="@{repeating_range_${x}_damage}" type="text" value=""/>
                 </label>
                 <label data-i18n-title="ap" title="ap">
-                  <input name="attr_ap" placeholder="-2" title="@{repeating_range_${x}_ap}" type="number" value=""/>
+                  <input name="attr_ap" placeholder="-2" title="@{repeating_range_${x}_ap}" type="text" value=""/>
                 </label>
                 <select name="attr_mode" title="@{mode}" value="BF">
                   <option data-i18n="bf" value="BF">BF</option>
@@ -933,7 +933,7 @@
                     <optgroup label="Combat Skills">Combat Skills
                       <option data-i18n="firearmsgroup" value="@{firearms}" selected="selected">Firearms Group</option>
                       <option data-i18n="automatics" value="@{automatics}">Automatics</option>
-                      <option data-i18n="Archery" value="@{Archery}">Archery</option>
+                      <option data-i18n="archery" value="@{Archery}">Archery</option>
                       <option data-i18n="exoticrange" value="0">Exotic Range</option>
                       <option data-i18n="heavyweapons" value="@{heavyweapons}">Heavy Weapons</option>
                       <option data-i18n="longarms" value="@{longarms}">Longarms</option>
@@ -984,7 +984,7 @@
                   <input name="attr_damage" placeholder="5P" title="@{repeating_melee_${x}_damage}" type="text" value=""/>
                 </label>
                 <label data-i18n-title="ap" title="ap">
-                  <input name="attr_ap" placeholder="-3" title="@{repeating_melee_${x}_ap}" type="number" value=""/>
+                  <input name="attr_ap" placeholder="-3" title="@{repeating_melee_${x}_ap}" type="text" value=""/>
                 </label>
                 <label data-i18n-title="reach" title="reach">
                   <input name="attr_reach" placeholder="1" title="@{repeating_melee_${x}_reach}" type="number" value=""/>
@@ -2489,7 +2489,7 @@
 <option value="Parachuting" data-i18n="parachuting">Parachuting</option>
 <option value="Perception" data-i18n="perception">Perception</option>
 <option value="Running" data-i18n="running">Running</option>
-<option value="Shadowing" data-i18n="Shadowing">Shadowing</option>
+<option value="Shadowing" data-i18n="shadowing">Shadowing</option>
 <option value="Survival" data-i18n="survival">Survival</option>
 <option value="Swimming" data-i18n="swimming">Swimming</option>
 <option value="Tracking" data-i18n="tracking">Tracking</option>
@@ -2532,7 +2532,7 @@
 <option value="Computer" data-i18n="computer">Computer</option>
 <option value="Cybercombat" data-i18n="cybercombat">Cybercombat</option>
 <option value="Cybertechnology" data-i18n="cybertechnology">Cybertechnology</option>
-<option value="Data Search" data-i18n="data search">Data Search</option>
+<option value="Data Search" data-i18n="datasearch">Data Search</option>
 <option value="Demolitions" data-i18n="demolitions">Demolitions</option>
 <option value="Electronic Warfare" data-i18n="electronicwarfare">Electronic Warfare</option>
 <option value="First Aid" data-i18n="firstaid">First Aid</option>
@@ -3219,8 +3219,8 @@ const processingFunctions = {
       return attrs
     },
     calculateConditionTracks: conditionInts => Math.ceil(conditionInts.attribute/2) + conditionInts.base + conditionInts.modifier,
-    calculateRunSpeed: (agility, modifier) => (agility * 4) + modifier,
-    calculateWalkSpeed:(agility, modifier) => (agility * 2) + modifier,
+    calculateRunSpeed: (agility, modifier) => 25 + modifier,
+    calculateWalkSpeed:(agility, modifier) => 10 + modifier,
     calculateWounds: attrs => {
       const divisor  = attrs.low_pain_tolerance === 2 ? attrs.low_pain_tolerance : 3;
       const highPain = attrs.high_pain_tolerance >= 1 ? attrs.high_pain_tolerance : 0;
