--- a/Shadowrun4thEdition/src/html/skillselect.html
+++ b/Shadowrun4thEdition/src/html/skillselect.html
@@ -30,7 +30,7 @@
 <option value="Parachuting" data-i18n="parachuting">Parachuting</option>
 <option value="Perception" data-i18n="perception">Perception</option>
 <option value="Running" data-i18n="running">Running</option>
-<option value="Shadowing" data-i18n="Shadowing">Shadowing</option>
+<option value="Shadowing" data-i18n="shadowing">Shadowing</option>
 <option value="Survival" data-i18n="survival">Survival</option>
 <option value="Swimming" data-i18n="swimming">Swimming</option>
 <option value="Tracking" data-i18n="tracking">Tracking</option>
@@ -73,7 +73,7 @@
 <option value="Computer" data-i18n="computer">Computer</option>
 <option value="Cybercombat" data-i18n="cybercombat">Cybercombat</option>
 <option value="Cybertechnology" data-i18n="cybertechnology">Cybertechnology</option>
-<option value="Data Search" data-i18n="data search">Data Search</option>
+<option value="Data Search" data-i18n="datasearch">Data Search</option>
 <option value="Demolitions" data-i18n="demolitions">Demolitions</option>
 <option value="Electronic Warfare" data-i18n="electronicwarfare">Electronic Warfare</option>
 <option value="First Aid" data-i18n="firstaid">First Aid</option>
