Adding missing infos

--- a/Agone-(french)/agone-sheet.html
+++ b/Agone-(french)/agone-sheet.html
@@ -1,3 +1,9 @@
+<!-- Agone Character Sheet -->
+
+<!-- Version 0.2 -->
+<!-- Author: Le Grand Dragon de la Foudre -->
+<!-- Website: http://legdf.free.fr-->
+
 <input name="attr_Menu" type="radio" class="pc-menu" value="pc" checked><span class="pc-menu-lbl title">Personnage</span>
 <input name="attr_Menu" type="radio" class="companion-menu" value="companion"><span class="companion-menu-lbl title">Compagnon</span>
 <input name="attr_Menu" type="radio" class="demon-menu" value="demon"><span class="demon-menu-lbl title">Démon</span>
