Normalizing description attribute

--- a/Agone-(french)/agone-sheet.html
+++ b/Agone-(french)/agone-sheet.html
@@ -138,7 +138,7 @@
 		<input type="number" name="attr_pcExp" class="pc-exp">
 		<span class="pc-fp-lbl">PH</span>
 		<input type="number" name="attr_pcFP" class="pc-fp">
-		<textarea name="attr_pcDesc" class="pc-desc"></textarea>
+		<textarea name="attr_pcDescription" class="pc-desc"></textarea>
 		<img src="http://legdf.free.fr/src/img/souffre-jour.png" class="pc-logo">
 	</div>
 	<div>
