remove obsolete css and add additiona user feedback

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1351,8 +1351,8 @@
                   </label>
                   <div class="row">
                     <h3 data-i18n="category">Category</h3>
-                    <select name="attr_category" title="@{repeating_spell_${x}_category}" value="combat">
-                      <option data-i18n="combat" value="Combat" selected="selected">combat</option>
+                    <select name="attr_category" title="@{repeating_spell_${x}_category}" value="Combat">
+                      <option data-i18n="combat" value="Combat">combat</option>
                       <option data-i18n="detection" value="Detection">detection</option>
                       <option data-i18n="health" value="Health">health</option>
                       <option data-i18n="illusion" value="Illusion">illusion</option>
@@ -1427,8 +1427,8 @@
                   </label>
                   <div class="row">
                     <h3 data-i18n="category">Category</h3>
-                    <select name="attr_category" title="@{repeating_preps_${x}_category}" value="combat">
-                      <option data-i18n="combat" value="Combat" selected="selected">combat</option>
+                    <select name="attr_category" title="@{repeating_preps_${x}_category}" value="Combat">
+                      <option data-i18n="combat" value="Combat">combat</option>
                       <option data-i18n="detection" value="Detection">detection</option>
                       <option data-i18n="health" value="Health">health</option>
                       <option data-i18n="illusion" value="Illusion">illusion</option>
