use grid instead of 3colrow for info section

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -218,103 +218,92 @@
 <!-- PAGE 1 -->
 <div class="page1 normal">
     <!-- CHARACTER INFO FIELDS -->
-    <div class="3colrow">
-        <table>
-            <tbody>
-                <tr>
-                    <td data-i18n="name">Name:</td>
-                    <td>
-                        <input type="text" name="attr_character_name">
-                    </td>
-                    <td>
-                        <span class="mortal1 mortal2 vampire1 werewolf1 mage promethean1 changeling1 geist1 mummy1 hunter demon" data-i18n="virtue" >Virtue:</span>
-                        <span class="vampire2" data-i18n="mask" >Mask:</span>
-                        <span class="werewolf2" data-i18n="blood" >Blood:</span>
-                        <span class="beast" data-i18n="life" >Life:</span>
-                        <span class="promethean2" data-i18n="elpis" >Elpis:</span>
-                        <span class="changeling2" data-i18n="needle" >Needle:</span>
-                    </td>
-                    <td>
-                        <input type="text" name="attr_Virtue">
-                    </td>
-                    <td>
-                        <span class="mortal1 mortal2" data-i18n="age" >Age:</span>
-                        <span class="vampire" data-i18n="clan" >Clan:</span>
-                        <span class="werewolf" data-i18n="auspice" >Auspice:</span>
-                        <span class="mage" data-i18n="path" >Path:</span>
-                        <span class="promethean" data-i18n="lineage" >Lineage:</span>
-                        <span class="changeling" data-i18n="seeming" >Seeming:</span>
-                        <span class="geist1" data-i18n="archtype" >Archtype</span>
-                        <span class="mummy" data-i18n="decree" >Decree:</span>
-                        <span class="demon" data-i18n="incarnation" >Incarnation:</span>
-                        <span class="beast" data-i18n="family" >Family:</span>
-                        <span class="hunter" data-i18n="profession" >Profession:</span>
-                    </td>
-                    <td>
-                        <input type="text" name="attr_Chronicle">
-                    </td>
-                </tr>
-                <tr>
-                    <td data-i18n="player">Player:</td>
-                    <td>
-                        <input type="text" name="attr_Age">
-                    </td>
-                    <td>
-                        <span class="mortal1 mortal2 vampire1 werewolf1 mage promethean1 changeling1 geist1 mummy1 hunter demon" data-i18n="vice" >Vice:</span>
-                        <span class="vampire2" data-i18n="dirge" >Dirge:</span>
-                        <span class="werewolf2" data-i18n="bone" >Bone:</span>
-                        <span class="beast" data-i18n="legend" >Legend:</span>
-                        <span class="promethean2" data-i18n="torment" >Torment:</span>
-                        <span class="changeling2" data-i18n="thread" >Thread:</span>
-                    </td>
-                    <td>
-                        <input type="text" name="attr_Vice">
-                    </td>
-                    <td>
-                        <span class="mortal1 mortal2" data-i18n="faction" >Faction:</span>
-                        <span class="vampire" data-i18n="bloodline" >Bloodline:</span>
-                        <span class="werewolf" data-i18n="tribe" >Tribe:</span>
-                        <span class="mage" data-i18n="order" >Order:</span>
-                        <span class="promethean" data-i18n="refinement" >Refinement:</span>
-                        <span class="changeling" data-i18n="kith" >Kith:</span>
-                        <span class="geist1" data-i18n="threshold" >Threshold:</span>
-                        <span class="mummy" data-i18n="guild" >Guild:</span>
-                        <span class="demon" data-i18n="agenda" >Agenda:</span>
-                        <span class="beast" data-i18n="hunger" >Hunger:</span>
-                        <span class="hunter" data-i18n="compact" >Compact/Conspiracy:</span>
-                    </td>
-                    <td>
-                        <input type="text" name="attr_Faction">
-                    </td>
-                </tr>
-                <tr>
-                    <td  data-i18n="cronicle">Chronicle:</td>
-                    <td>
-                        <input type="text" name="attr_Player">
-                    </td>
-                    <td  data-i18n="concept">Concept:</td>
-                    <td>
-                        <input type="text" name="attr_Concept">
-                    </td>
-                    <td>
-                        <span class="mortal1 mortal2" data-i18n="group-name" >Group Name:</span>
-                        <span class="vampire" data-i18n="covenant" >Covenant:</span>
-                        <span class="werewolf" data-i18n="lodge" >Lodge:</span>
-                        <span class="mage" data-i18n="legacy" >Legacy:</span>
-                        <span class="promethean1" data-i18n="athanor" >Athanor:</span>
-                        <span class="promethean2" data-i18n="role" >Role:</span>
-                        <span class="changeling" data-i18n="court" >Court:</span>
-                        <span class="geist1" data-i18n="krewe" >Krewe:</span>
-                        <span class="mummy" data-i18n="judge" >Judge:</span>
-                        <span class="demon" data-i18n="catalyst" >Catalyst:</span>
-                        <span class="beast" data-i18n="horror" >Horror:</span>
-                    </td>
-                    <td>
-                        <input type="text" name="attr_GroupName">
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="info-grid">
+        <!-- Row 1 -->
+        <div class="input-label">
+            <span data-i18n="name">Name:</span>
+        </div>
+        <input type="text" name="attr_character_name">
+        <div class="spacer"></div>
+        <div class="input-label">
+            <span class="mortal1 mortal2 vampire1 werewolf1 mage promethean1 changeling1 geist1 mummy1 hunter demon" data-i18n="virtue" >Virtue:</span>
+            <span class="vampire2" data-i18n="mask" >Mask:</span>
+            <span class="werewolf2" data-i18n="blood" >Blood:</span>
+            <span class="beast" data-i18n="life" >Life:</span>
+            <span class="promethean2" data-i18n="elpis" >Elpis:</span>
+            <span class="changeling2" data-i18n="needle" >Needle:</span>
+        </div>
+        <input type="text" name="attr_Virtue">
+        <div class="spacer"></div>
+        <div class="input-label">
+            <span class="mortal1 mortal2" data-i18n="age" >Age:</span>
+            <span class="vampire" data-i18n="clan" >Clan:</span>
+            <span class="werewolf" data-i18n="auspice" >Auspice:</span>
+            <span class="mage" data-i18n="path" >Path:</span>
+            <span class="promethean" data-i18n="lineage" >Lineage:</span>
+            <span class="changeling" data-i18n="seeming" >Seeming:</span>
+            <span class="geist1" data-i18n="archtype" >Archtype</span>
+            <span class="mummy" data-i18n="decree" >Decree:</span>
+            <span class="demon" data-i18n="incarnation" >Incarnation:</span>
+            <span class="beast" data-i18n="family" >Family:</span>
+            <span class="hunter" data-i18n="profession" >Profession:</span>
+        </div>
+        <input type="text" name="attr_Chronicle">
+        <!-- Row 2 -->
+        <div class="input-label">
+            <span data-i18n="player">Player:</span>
+        </div>
+        <input type="text" name="attr_Age">
+        <div class="spacer"></div>
+        <div class="input-label">
+            <span class="mortal1 mortal2 vampire1 werewolf1 mage promethean1 changeling1 geist1 mummy1 hunter demon" data-i18n="vice" >Vice:</span>
+            <span class="vampire2" data-i18n="dirge" >Dirge:</span>
+            <span class="werewolf2" data-i18n="bone" >Bone:</span>
+            <span class="beast" data-i18n="legend" >Legend:</span>
+            <span class="promethean2" data-i18n="torment" >Torment:</span>
+            <span class="changeling2" data-i18n="thread" >Thread:</span>
+        </div>
+        <input type="text" name="attr_Vice">
+        <div class="spacer"></div>
+        <div class="input-label">
+            <span class="mortal1 mortal2" data-i18n="faction" >Faction:</span>
+            <span class="vampire" data-i18n="bloodline" >Bloodline:</span>
+            <span class="werewolf" data-i18n="tribe" >Tribe:</span>
+            <span class="mage" data-i18n="order" >Order:</span>
+            <span class="promethean" data-i18n="refinement" >Refinement:</span>
+            <span class="changeling" data-i18n="kith" >Kith:</span>
+            <span class="geist1" data-i18n="threshold" >Threshold:</span>
+            <span class="mummy" data-i18n="guild" >Guild:</span>
+            <span class="demon" data-i18n="agenda" >Agenda:</span>
+            <span class="beast" data-i18n="hunger" >Hunger:</span>
+            <span class="hunter" data-i18n="compact" >Compact/Conspiracy:</span>
+        </div>
+        <input type="text" name="attr_Faction">
+        <!-- Row 3 -->
+        <div class="input-label">
+            <span data-i18n="cronicle">Chronicle:</span>
+        </div>
+        <input type="text" name="attr_Player">
+        <div class="spacer"></div>
+        <div class="input-label">
+            <span data-i18n="concept">Concept:</span>
+        </div>
+        <input type="text" name="attr_Concept">
+        <div class="spacer"></div>
+        <div class="input-label">
+            <span class="mortal1 mortal2" data-i18n="group-name" >Group Name:</span>
+            <span class="vampire" data-i18n="covenant" >Covenant:</span>
+            <span class="werewolf" data-i18n="lodge" >Lodge:</span>
+            <span class="mage" data-i18n="legacy" >Legacy:</span>
+            <span class="promethean1" data-i18n="athanor" >Athanor:</span>
+            <span class="promethean2" data-i18n="role" >Role:</span>
+            <span class="changeling" data-i18n="court" >Court:</span>
+            <span class="geist1" data-i18n="krewe" >Krewe:</span>
+            <span class="mummy" data-i18n="judge" >Judge:</span>
+            <span class="demon" data-i18n="catalyst" >Catalyst:</span>
+            <span class="beast" data-i18n="horror" >Horror:</span>
+        </div>
+        <input type="text" name="attr_GroupName">
     </div>
 
     <div class="spacer"></div>
